force-app/main/default/objects/OrderServiceRequest__c/OrderServiceRequest__c.object-meta.xml
<CustomObject>
    <description>주문 서비스 요청</description>
    <label>OrderServiceRequest</label>
    <nameField>
        <label>OrderServiceRequest__c 이름</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>