force-app/main/default/objects/OrderServiceRequest__c/fields/CustomerID__c.field-meta.xml
<CustomField>
    <fullName>CustomerID__c</fullName>
    <label>CustomerID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>