force-app/main/default/objects/OrderServiceRequest__c/fields/ExtraServiceCategory__c.field-meta.xml
<CustomField>
    <fullName>ExtraServiceCategory__c</fullName>
    <label>부가서비스카테고리</label>
    <length>255</length>
    <type>Text</type>
</CustomField>