force-app/main/default/objects/OrderServiceRequest__c/fields/ExtraServiceCategoryCode__c.field-meta.xml
<CustomField>
    <fullName>ExtraServiceCategoryCode__c</fullName>
    <description>주문시스템의 부가서비스내역 코드</description>
    <label>ExtraServiceCategoryCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>