force-app/main/default/objects/OrderServiceRequest__c/fields/Finder__c.field-meta.xml
<CustomField>
    <fullName>Finder__c</fullName>
    <description>접수자</description>
    <label>Finder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>