force-app/main/default/objects/OrderServiceRequest__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>담당자</description>
    <label>담당자</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OrderServiceRequest</relationshipName>
    <type>Lookup</type>
</CustomField>