force-app/main/default/objects/OrderServiceRequest__c/fields/MDMReferenceCode__c.field-meta.xml
<CustomField>
    <fullName>MDMReferenceCode__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>MDM고객</label>
    <referenceTo>MDMReferenceCode__c</referenceTo>
    <relationshipLabel>OrderServiceRequest</relationshipLabel>
    <relationshipName>OrderServiceRequest</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>