force-app/main/default/objects/OrderServiceRequest__c/fields/ReqRecordId__c.field-meta.xml
<CustomField>
    <fullName>ReqRecordId__c</fullName>
    <description>주문시스템레코드ID</description>
    <label>ReqRecordId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>