force-app/main/default/objects/OrderServiceRequest__c/fields/ReqType__c.field-meta.xml
<CustomField>
    <fullName>ReqType__c</fullName>
    <label>ReqType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>샘플요청</fullName>
            </value>
            <value>
                <fullName>부가서비스 요청</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>