force-app/main/default/objects/OrderServiceRequest__c/fields/ReqTypeCode__c.field-meta.xml
<CustomField>
    <fullName>ReqTypeCode__c</fullName>
    <description>문의 구분 코드</description>
    <label>ReqTypeCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>