force-app/main/default/objects/OrderServiceRequest__c/fields/RequestDate__c.field-meta.xml
<CustomField>
    <fullName>RequestDate__c</fullName>
    <description>작성일</description>
    <label>RequestDate</label>
    <required>true</required>
    <type>Date</type>
</CustomField>