force-app/main/default/objects/OrderServiceRequest__c/fields/RequestMessage__c.field-meta.xml
<CustomField>
    <fullName>RequestMessage__c</fullName>
    <description>문의접수내용</description>
    <label>RequestMessage</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>