force-app/main/default/objects/OrderServiceRequest__c/fields/ResponseDate__c.field-meta.xml
<CustomField>
    <fullName>ResponseDate__c</fullName>
    <description>답변일</description>
    <label>ResponseDate</label>
    <type>Date</type>
</CustomField>