force-app/main/default/objects/OrderServiceRequest__c/fields/ResponseMessage__c.field-meta.xml
<CustomField>
    <fullName>ResponseMessage__c</fullName>
    <description>답변내용</description>
    <label>ResponseMessage</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>