force-app/main/default/objects/OrderServiceRequest__c/fields/ResponseTitle__c.field-meta.xml
<CustomField>
    <fullName>ResponseTitle__c</fullName>
    <description>답변제목</description>
    <label>ResponseTitle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>