force-app/main/default/objects/OrderServiceRequest__c/fields/Sampleitem1__c.field-meta.xml
<CustomField>
    <fullName>Sampleitem1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>샘플상품1</description>
    <label>요청샘플1</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>OrderServiceRequest</relationshipLabel>
    <relationshipName>OrderServiceRequest</relationshipName>
    <type>Lookup</type>
</CustomField>