force-app/main/default/objects/OrderServiceRequest__c/fields/Sampleitem2__c.field-meta.xml
<CustomField>
    <fullName>Sampleitem2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>샘플상품2</description>
    <label>요청샘플2</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>OrderServiceRequest (상품)</relationshipLabel>
    <relationshipName>OrderServiceRequest1</relationshipName>
    <type>Lookup</type>
</CustomField>