force-app/main/default/objects/OrderServiceRequest__c/fields/Sampleitem3__c.field-meta.xml
<CustomField>
    <fullName>Sampleitem3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>샘플제품3</description>
    <label>요청샘플3</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>OrderServiceRequest (요청샘플3)</relationshipLabel>
    <relationshipName>OrderServiceRequest2</relationshipName>
    <type>Lookup</type>
</CustomField>