force-app/main/default/objects/OrderServiceRequest__c/fields/SampleitemText1__c.field-meta.xml
<CustomField>
    <fullName>SampleitemText1__c</fullName>
    <description>신청샘플상품텍스트1</description>
    <label>SampleitemText1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>