force-app/main/default/objects/OrderServiceRequest__c/fields/SampleitemText2__c.field-meta.xml
<CustomField>
    <fullName>SampleitemText2__c</fullName>
    <description>신청샘플상품텍스트2</description>
    <label>SampleitemText2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>