force-app/main/default/objects/OrderServiceRequest__c/fields/SampleitemText3__c.field-meta.xml
<CustomField>
    <fullName>SampleitemText3__c</fullName>
    <description>신청샘플상품텍스트3</description>
    <label>SampleitemText3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>