force-app/main/default/objects/OrderServiceRequest__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>R</fullName>
                <label>접수</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>답변완료</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>답변지연</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>