force-app/main/default/objects/OrderServiceRequest__c/recordTypes/RecordType.recordType-meta.xml
<RecordType>
    <fullName>RecordType</fullName>
    <active>true</active>
    <description>부가서비스요청</description>
    <label>부가서비스요청</label>
</RecordType>