force-app/main/default/objects/OrderServiceRequest__c/recordTypes/RecordType1.recordType-meta.xml
<RecordType>
    <fullName>RecordType1</fullName>
    <active>true</active>
    <description>샘플요청</description>
    <label>샘플요청</label>
</RecordType>